--- a/views/quanlyhoadon_doanhnghiep.ejs
+++ b/views/quanlyhoadon_doanhnghiep.ejs
@@ -27,7 +27,7 @@
     <!-- Modernizer JS -->
     <!--SOCKETIO for Sign up-->
     <script src="socket.io/socket.io.js"></script>
-    <script> var socket = io('http://localhost:3000'); </script>
+    <script> var socket = io('http://3.86.166.71:3000'); </script>
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
