--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/styleLogin.css">
     <script src="socket.io/socket.io.js"></script>
-    <script> var socket = io('http://localhost:3000'); </script>
+    <script> var socket = io('http://3.86.166.71:3000'); </script>
     <script>
         function checkCustomer() {
             var name = checkCustomerName(document.getElementById('txtCustomername').value);
