--- a/views/quanlysanpham_business.ejs
+++ b/views/quanlysanpham_business.ejs
@@ -30,7 +30,7 @@
     <script src='js/jquery.min.js'></script>
     <link rel="stylesheet" href="css/swiper.min.css">
     <script src="socket.io/socket.io.js"></script>
-    <script> var socket = io('http://localhost:3000'); </script>
+    <script> var socket = io('http://3.86.166.71:3000'); </script>
     <script>
         $(document).ready(function () {
             $("#addProductBtn").click(function () {
