--- a/views/index.ejs
+++ b/views/index.ejs
@@ -334,7 +334,7 @@
                             <% _uG.forEach((item) => { %>
                             <% var date = new Date(item.auction.startDate); %>
                             <% var nowdate = new Date(); %>
-                            <% if(nowdate.getTime() - date.getTime() < item.auction.timeRun*1000){ %>
+                            <% if(nowdate.getTime() - date.getTime() + 1000*60*60*24 < item.auction.timeRun*1000){ %>
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <div class="sin-product">
                                     <div class="pro-image fix">
@@ -350,7 +350,7 @@
                                             <br>Năm DG: <%= date.getFullYear() %> Tháng: <%= date.getMonth() %> Ngày: <%= date.getDate() %> Giờ: <%= nowdate.getDate() %> Phút: <%= nowdate.getDate() %>
                                     </div>
                                     <div class="pro-details text-center">
-                                        <% if((date.getTime() - nowdate.getTime()) > 0){ %>
+                                        <% if((date.getTime() - nowdate.getTime() + 1000*60*60*24 ) > 0){ %>
                                         <div class="top fix">
                                             <p class="pro-cat float-left">Xe</p>
                                             <p class="pro-ratting float-right">
