--- a/views/quanlysanpham_doanhnghiep.ejs
+++ b/views/quanlysanpham_doanhnghiep.ejs
@@ -321,7 +321,7 @@
                         $('#error_AuctionTimeRun').text("Thời gian chạy không nằm trong giới hạn quy định");
                     }else if(Number($("#startPrice").val()) > 100000000 || Number($("#startPrice").val()) < 0){
                         $('#error_AuctionPrice').text("Giá tiền không nằm trong giới hạn quy định!");
-                    }else if ((date.getTime() - (nowdate.getTime() + 1000*60*60*7)) < 0 || (date.getTime() - (nowdate.getTime() + 1000*60*60*7)) > (1000*60*60*24*30)) { 
+                    }else if ((date.getTime() - (nowdate.getTime())) < 0 || (date.getTime() - (nowdate.getTime())) > (1000*60*60*24*30)) { 
                         $('#error_AuctionDate').text('Giới hạn ngày không phù hợp!');
                     } else {
                         $("#formAddAuction").submit();
